# helios

./: .gitignore  LICENSE  README-brand-snippet.md  README.md  helios.py  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/workflows/: tests.yml
docs/: BRANDING.md  CISCO_LIFECYCLE_CATALOG.md  COLLECTOR_SAFETY_CATALOG.md  PORTABLE_RELEASE.md  REPORT_TEMPLATES.md  SECURITY_AND_DATA_HANDLING.md  SERVICE_HEALTH_POLICY.md  TECHNOLOGY_MODULARIZATION_PLAN.md  TRANSPORT_TRUST.md
docs/engineering/: CURRENT_STATE_GAP_ANALYSIS.md
portable/: Activate.ps1  activate  aletheiauc  aletheiauc.ps1  install.ps1  install.sh
scripts/: build_portable_release.py
src/cisco_collab_health/: __init__.py  __main__.py  application.py  artifacts.py  cli.py  collector_registry.py  config.py  engine.py  interfaces.py  lifecycle.py  menu.py  status.py
src/cisco_collab_health/collectors/: __init__.py  axl.py  axl_bodies.py  axl_errors.py  axl_parsers.py  axl_version.py  base.py  cli.py  cluster.py  cuc.py  cuc_platform.py  cucm_platform.py  diagnostic.py  risport.py  sample.py  serviceability.py  ssh_preflight.py  ucos_summary.py
src/cisco_collab_health/collectors/axl/: bodies.py  collector.py  parsers.py
src/cisco_collab_health/models/: __init__.py  assessment.py  evidence.py  facts.py  findings.py  runtime.py
src/cisco_collab_health/reports/: __init__.py  coverage.py  formatting.py  html.py  json.py  pdf.py  reconciliation.py  summary.py
src/cisco_collab_health/rules/: __init__.py  base.py  basic.py
src/cisco_collab_health/technologies/cuc/: plugin.py
src/cisco_collab_health/technologies/cucm/: plugin.py
src/cisco_collab_health/transport/: __init__.py  http.py  soap.py  ssh.py  tls.py
tests/: test_artifacts.py  test_axl_collector.py  test_cli.py  test_config.py  test_cuc_collector.py  test_cuc_platform.py  test_cucm_platform.py  test_diagnostic_collector.py  test_engine.py  test_facts.py  test_interfaces.py  test_lifecycle.py  test_packaging.py  test_pdf.py  test_portable_release.py  test_reports.py  test_rules.py  test_soap_transport.py  test_ssh_preflight.py  test_ssh_transport.py  test_tls.py
