[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-collab-health"
version = "0.1.0a0"
description = "Cisco Collaboration Health Assessment Tool"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Cisco Collaboration Health Assessment Tool contributors" }
]
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
ccha = "cisco_collab_health.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cisco_collab_health"]
