[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-collab-health"
version = "0.1.0a0"
description = "Cisco Collaboration Health Assessment Tool"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Cisco Collaboration Health Assessment Tool contributors" }
]
license = { file = "LICENSE" }
dependencies = ["keyring>=25"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
ccha = "cisco_collab_health.cli:main"
helios = "cisco_collab_health.cli:main"

[project.urls]
Homepage = "https://github.com/Unhall0w3d/helios"
Repository = "https://github.com/Unhall0w3d/helios"
Issues = "https://github.com/Unhall0w3d/helios/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cisco_collab_health"]
