[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-collab-health"
version = "0.1.0a0"
description = "AletheiaUC is a Cisco Collaboration health assessment tool focused on CUCM/SME."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kenneth Perry" }
]
license = { file = "LICENSE" }
dependencies = ["keyring>=25", "defusedxml>=0.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "types-defusedxml>=0.7"]

[project.scripts]
aletheiauc = "cisco_collab_health.cli:main"
ccha = "cisco_collab_health.cli:main"

[project.urls]
Homepage = "https://github.com/unhall0w3d/aletheiauc"
Repository = "https://github.com/unhall0w3d/aletheiauc"
Issues = "https://github.com/unhall0w3d/aletheiauc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cisco_collab_health"]
